--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -31,9 +31,23 @@
 .login_button {
     background: #2a77db;
     border-radius: 10px;
-    width: 75%;
+    width: 60%;
     height: 30px;
     border: 2px solid #2f6ec0;
     margin-top: 20px;
     color: white;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.register_button {
+    background: #2a77db;
+    border-radius: 10px;
+    width: 60%;
+    height: 30px;
+    border: 2px solid #2f6ec0;
+    margin-top: 50px;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
 }
