--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -8,7 +8,12 @@
 
 .row {
     display: flex;
+    flex-wrap: wrap;
     z-index: 1;
     margin-left: 5px;
     margin-right: 5px;
+}
+
+.row > * {
+    flex: 1 1 21%;
 }
