--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -1,15 +1,10 @@
 .product {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
     margin: 10px;
     padding: 20px;
     width: 100%;
     max-height: 400px;
     min-width: 100px;
     background-color: white;
-    z-index: 1;
 }
 
 .info {
@@ -23,6 +18,7 @@
 
 .rating {
     display: flex;
+    justify-content: center;
 }
 
 .button {
@@ -32,12 +28,13 @@
     margin-top: 10px;
     color: black;
     border-radius: 10px;
-    width: 120%;
-    height: 110%;
+    max-width: 300px;
+    width: 100%;
+    height: 50px;
 }
 
 .img {
-    max-height: 200px;
+    height: 200px;
     width: 100%;
     object-fit: contain;
     margin-bottom: 15px;
