--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -22,15 +22,15 @@
 }
 
 .button {
-    background: #34d65a;
+    background: #417dff;
     border: 1px solid;
-    border-color: #279942;
+    border-color: #1a62ff;
     margin-top: 10px;
-    color: black;
+    color: white;
     border-radius: 10px;
     max-width: 300px;
     width: 100%;
-    height: 50px;
+    height: 40px;
 }
 
 .img {
