--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -39,3 +39,13 @@
     object-fit: contain;
     margin-bottom: 15px;
 }
+
+.admin {
+    display: flex;
+    justify-content: center;
+}
+
+.admin > input {
+    margin-left: 10px;
+    margin-right: 10px;
+}
