Edit Product complete

--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -40,12 +40,12 @@
     margin-bottom: 15px;
 }
 
-.admin {
+.remove {
     display: flex;
     justify-content: center;
 }
 
-.admin > input {
+.remove > input {
     margin-left: 10px;
     margin-right: 10px;
 }
