--- a/src/css/Payment.css
+++ b/src/css/Payment.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+.payment_container_small {
+    display: inline;
+}
+
 .payment_left {
     width: 70%;
 }
@@ -10,6 +14,16 @@
     font-weight: 400;
     text-align: left;
     margin-left: 20px;
+}
+
+.payment_right {
+    width: 30%;
+    margin-right: 20px;
+}
+
+.payment_right_small {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .payment_right_text {
@@ -36,9 +50,9 @@
 }
 
 .card {
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
 }
-
 .button:disabled {
     background: lightgray;
     border-radius: 10px;
