--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -32,7 +32,10 @@
     height: 12px;
     padding: 10px;
     border: none;
+    border-radius: 10px;
     width: 100%;
+    margin-bottom: 20px;
+    margin-right: 10px;
 }
 
 .search_icon {
