Better responsive design - reduced code duplication

--- a/src/css/Cart.css
+++ b/src/css/Cart.css
@@ -39,8 +39,12 @@
     justify-items: left;
 }
 
-.subtotalRight {
+.subtotalRight_large {
     width: 30%;
+}
+
+.subtotalRight_small {
+    width: 100%;
 }
 
 .cart_subtotal_small {
