--- a/src/css/Cart.css
+++ b/src/css/Cart.css
@@ -50,3 +50,15 @@
 .cart_subtotal_small {
     text-align: center;
 }
+
+.subtotal > button {
+    background: #417dff;
+    border: 1px solid;
+    border-color: #1a62ff;
+    margin-top: 10px;
+    color: white;
+    border-radius: 10px;
+    max-width: 300px;
+    width: 100%;
+    height: 40px;
+}
